--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,23 +36,14 @@
       </nav>
     </header>
 
-    <!-- Main Content -->
-    <main id="mainContent" tabindex="0">
-      <div class="jumbotron">
-        <div class="jumbotron-inner">
-          <h1 class="jumbotron-title">El-Toro Resto</h1>
-          <p class="jumbotron-desc">Food: the language everyone understands 🍽️🌍</p>
-        </div>
+    <div id="jumbotron" class="jumbotron">
+      <div class="jumbotron-inner">
+        <h1 class="jumbotron-title">El-Toro Resto</h1>
+        <p class="jumbotron-desc">Food: the language everyone understands 🍽️🌍</p>
       </div>
-
-      <!-- <section class="content">
-        <div class="restoran">
-          <h1>Cari Restoran</h1>
-          <br>
-          <div class="list" id="daftar-resto"></div>
-        </div>
-      </section> -->
-    </main>
+    </div>
+    <!-- Main Content -->
+    <main id="mainContent" tabindex="0"></main>
 
     <!-- Footer -->
     <footer>
