--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,21 +25,22 @@
         <button id="hamburgerButton">☰</button>
       </div>
       <div class="app-bar__title">
-        <h1><a href="">El-Toro Resto</a></h1>
+        <h1><a href="">El - Toro Resto</a></h1>
       </div>
-      <nav id="navigationDrawer" class="app-bar__navigation">
+      <nav id="navDrawer" class="app-bar__nav">
         <ul>
           <li><a href="#/Home">Home</a></li>
           <li><a href="#/favorite">Favorite</a></li>
           <li><a href="https://www.instagram.com/trizkianggara/">About Us</a></li>
         </ul>
       </nav>
+      
     </header>
 
-    <div id="jumbotron" class="jumbotron">
-      <div class="jumbotron-inner">
-        <h1 class="jumbotron-title">El-Toro Resto</h1>
-        <p class="jumbotron-desc">Food: the language everyone understands 🍽️🌍</p>
+    <div id="hero" class="hero">
+      <div class="hero-inner">
+        <h1 class="hero-title">El-Toro Resto</h1>
+        <p class="hero-desc">Food: the language everyone understands 🍽️🌍</p>
       </div>
     </div>
     <!-- Main Content -->
