--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,16 +16,17 @@ body {
   font-size: 12px;
   color: #424242;
 }
+
 .app-bar {
   padding: 8px 16px;
-  background-color: #007F73;
+  background-color: #799351;
   display: grid;
   grid-template-columns: auto 1fr auto;
   gap: 10px;
   position: sticky;
   top: 0;
   z-index: 99;
-  box-shadow: 0 2px 4px rgba(0, 0, 0.2,);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .app-bar .app-bar__menu {
@@ -44,44 +45,48 @@ body {
 .app-bar .app-bar__title {
   display: flex;
   align-items: center;
+  display: inline-block;
+    min-width: 44px;
+    min-height: 44px;
 }
- 
+
 .app-bar .app-bar__title h1 a {
-  color: yellow;
+  color: #F6EEC9;
   text-transform: uppercase;
   text-decoration: none;
   font-size: 22px;
-  padding: 0.8em;
- 
+  display: inline-block;
+    min-width: 44px;
+    min-height: 44px;
 }
- 
-.app-bar .app-bar__navigation {
+
+.app-bar .app-bar__nav {
   position: absolute;
-  top: 50px;
+  top: 68px;
   left: -180px;
   width: 150px;
   transition: all 0.3s;
   padding: 8px;
-  background-color: #007F73;
+  background-color: #799351;
   overflow: hidden;
 }
- 
-.app-bar .app-bar__navigation.open {
+
+.app-bar .app-bar__nav.open {
   left: 0;
 }
- 
-.app-bar .app-bar__navigation ul li a {
+
+.app-bar .app-bar__nav ul li a {
   display: inline-block;
   text-decoration: none;
-  color: yellow;
+  color: #F6EEC9;
   padding: 1em;
   margin-bottom: 5px;
   width: 100%;
+  
 }
 
-
-/* jumbotron */
-.jumbotron {
+/* hero */
+.hero {
   width: 100%;
   display: flex;
   align-items: center;
@@ -93,19 +98,19 @@ body {
   background-size: cover;
 }
 
-.jumbotron-inner {
+.hero-inner {
   margin: 0 auto;
   max-width: 800px;
 }
 
-.jumbotron-title {
+.hero-title {
   color: #F6EEC9;
   font-weight: 500px;
   font-size: 40px;
   text-align: center;
 }
 
-.jumbotron-desc{
+.hero-desc {
   color: #F6EEC9;
   margin-top: 16px;
   font-size: 20px;
@@ -113,7 +118,7 @@ body {
 }
 
 /* Main */
-main{
+main {
   width: 100%;
   margin: 0 auto;
 }
@@ -145,7 +150,7 @@ main{
   background-color: #ffffff;
 }
 
-.contentlist a{
+.contentlist a {
   text-decoration: none;
   color: #393646;
 }
@@ -155,17 +160,17 @@ main{
   max-height: 250px;
 }
 
-.restaurant_info {
+.resto_info {
   padding: 18px 32px 32px 32px;
   color: black;
 }
 
-.info_title{
+.info_judul {
   text-align: center;
   padding: 0.8em;
 }
 
-.info_title:hover {
+.info_judul:hover {
   opacity: 0.7;
 }
 
@@ -180,13 +185,13 @@ main{
 }
 
 .info_rates {
-  color: yellow;
+  color: #F6EEC9;
   text-align: center;
   margin-top: 5px;
   padding: 0.8em;
   font-style: italic;
   border-radius: 5px 5px 5px;
-  background-color: #007F73;
+  background-color: #799351;
 }
 
 /* halaman detail */
@@ -198,7 +203,7 @@ main{
   gap: 18px 16px;
 }
 
-.contentdetail .restaurant_info_detail{
+.contentdetail .resto_info_detail {
   margin: 0 auto;
   width: 100%;
   max-width: 800px;
@@ -207,10 +212,9 @@ main{
   gap: 18px 16px;
 }
 
-.contentdetail .detail_title{
+.contentdetail .detail_title {
   margin-top: 50px;
   text-align: center;
-  
 }
 
 .contentdetail .image_detail {
@@ -219,7 +223,7 @@ main{
   margin: 0 auto;
 }
 
-.contentdetail .detail_list{
+.contentdetail .detail_list {
   margin-bottom: 50px;
   padding: 1em;
 }
@@ -232,43 +236,42 @@ main{
 .menuContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px; 
+  gap: 20px;
   margin: 30px;
   margin-left: 30px;
 }
 
-.foodMenu,
-.drinkMenu {
+.menuMakan,
+.menuMinum {
   margin-bottom: 20px;
   padding: 20px;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   border-radius: 8px;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1); 
-  background-color: #007F73;
-  color: yellow;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
+  background-color: #799351;
+  color: #F6EEC9;
 }
 
-.foodMenu ul,
-.drinkMenu ul {
+.menuMakan ul,
+.menuMinum ul {
   list-style-type: decimal;
-  padding-left: 20px; 
+  padding-left: 20px;
 }
 
-.foodMenu h3,
-.drinkMenu h3 {
+.menuMakan h3,
+.menuMinum h3 {
   margin-bottom: 10px;
-  color: white; 
+  color: white;
 }
 
-.foodMenu li,
-.drinkMenu li {
+.menuMakan li,
+.menuMinum li {
   margin-bottom: 5px;
-  font-size: 16px; 
-  line-height: 1.4; 
+  font-size: 16px;
+  line-height: 1.4;
 }
-
 
 /* untuk ulasan */
 .reviewCust {
@@ -284,26 +287,25 @@ main{
 .customerReviews {
   display: flex;
   flex-wrap: wrap;
-  background-color: #007F73;
-  color: yellow;
+  background-color: #799351;
+  color: #F6EEC9;
 }
 
 .customerReview {
-  flex: 1 1 300px; 
+  flex: 1 1 300px;
   margin: 5px;
   padding: 10px;
-  border: 2px solid yellow;
+  border: 2px solid #F6EEC9;
 }
 
-
-/* fitur like */
-.like {
+/* fitur suka */
+.suka {
   width: 55px;
   height: 55px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #007F73;
+  background-color: #799351;
 
   position: fixed;
   bottom: 16px;
@@ -312,12 +314,12 @@ main{
   border: 0;
 
   font-size: 18px;
-  color: yellow;
+  color: #F6EEC9;
   cursor: pointer;
 }
 
 /* untuk reviewer */
-.title-review {
+.judul-review {
   font-size: 24px;
   margin-bottom: 20px;
   color: #333;
@@ -330,13 +332,13 @@ form {
   border: 1px solid #ccc;
   padding: 20px;
   border-radius: 5px;
-  background-color: #007F73;
+  background-color: #799351;
 }
 
 label {
   display: block;
   margin-bottom: 5px;
-  color: yellow;
+  color: #F6EEC9;
 }
 
 input[type="text"],
@@ -349,7 +351,7 @@ textarea {
 }
 
 #title-button {
-  background-color: yellow;
+  background-color: #F6EEC9;
   color: black;
   border: none;
   border-radius: 4px;
@@ -384,23 +386,22 @@ button:hover {
   color: #666;
 }
 
-
-
 /* footer */
-footer{
+footer {
   width: 100%;
   text-align: center;
   font-size: 18px;
   margin-bottom: 0;
   background-color: #799351;
-  color: #F6EEC9; 
+  color: #F6EEC9;
 }
-footer p{
+
+footer p {
   padding: 1em;
 }
 
 /* Skip Content */
-.skip-link{
+.skip-link {
   position: absolute;
   top: -40px;
   left: 0;
@@ -413,6 +414,3 @@ footer p{
 .skip-link:focus {
   top: 0;
 }
-
-
-
