Menerapkan image responsive

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -26,10 +26,25 @@
       width: 120px;
       text-align: center;
       margin: 0;
+
+    .hero {
+      background-image: url(../public/images/hero-image_2-small.jpg);
+      height: 60vh;
+      background-image: -webkit-image-set("../public/images/hero-image_2-small.jpg" 1x);
+      background-image: -webkit-image-set(url("../public/images/hero-image_2-small.jpg") 1x);
+      background-image: image-set("../public/images/hero-image_2-small.jpg" 1x);
     }
   }
+}
   
   @media screen and (max-width: 500px) {
+    .hero {
+      background-image: url(../public/images/hero-image_2-small.jpg);
+      height: 60vh;
+      background-image: -webkit-image-set("../public/images/hero-image_2-small.jpg" 1x);
+      background-image: -webkit-image-set(url("../public/images/hero-image_2-small.jpg") 1x);
+      background-image: image-set("../public/images/hero-image_2-small.jpg" 1x);
+    }
   
     .app-bar .app-bar__title h1 a{
       font-size: 20px;
@@ -101,6 +116,13 @@
      }
     }
   @media screen and (min-width: 500px) {
+    .hero {
+      background-image: url(../public/images/hero-image_2-small.jpg);
+      height: 60vh;
+      background-image: -webkit-image-set("../public/images/hero-image_2-small.jpg" 1x);
+      background-image: -webkit-image-set(url("../public/images/hero-image_2-small.jpg") 1x);
+      background-image: image-set("../public/images/hero-image_2-small.jpg" 1x);
+    }
     .nav-mob {
       display: none;
     }
@@ -121,6 +143,13 @@
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 10px;
       grid-row-gap: 15px;
+    }
+    .hero {
+      background-image: url(../public/images/hero-image_2-small.jpg);
+      height: 60vh;
+      background-image: -webkit-image-set("../public/images/hero-image_2-small.jpg" 1x);
+      background-image: -webkit-image-set(url("../public/images/hero-image_2-small.jpg") 1x);
+      background-image: image-set("../public/images/hero-image_2-small.jpg" 1x);
     }
   }
   
