--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -95,6 +95,9 @@ body {
   text-align: center;
   height: 500px;
   background-image: linear-gradient(rgba(0, 0, 5, .5), rgba(0, 0, 5, .5)),url(../public/images/hero-image_2.jpg);
+  background-image: -webkit-image-set("../public/images/hero-image_2-large.jpg" 2x);
+  background-image: -webkit-image-set(url("../public/images/hero-image_2-large.jpg") 2x);
+  background-image: image-set("../public/images/hero-image_2-large.jpg" 2x);
   background-position: center;
   background-color: white;
   background-size: cover;
